--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -19,10 +19,10 @@
              ng-model="lunch">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="lunchCount()">Check If Too Much</button>
          </div>
          <div class="form-group message">
-            {{lunchList}}
+            {{lunchMsg}}
          </div>
    </div>
 
