--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,20 +6,27 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body>
-   <div class="container">
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+  <body ng-app="NarrowItDownApp">
+    <div class="container" ng-controller="NarrowItDownController as ctrl">
+      <h1>Narrow Down Your Chinese Menu Choice</h1>
+
+      <div class="form-group">
+        <input type="text" placeholder="search term" class="form-control"
+               ng-model="ctrl.searchTerm">
+      </div>
+      <div class="form-group narrow-button">
+        <button class="btn btn-primary"
+                ng-click="ctrl.getFoundItems()">Narrow It Down For Me!</button>
+      </div>
+
+      <!-- found-items should be implemented as a component -->
+      <found-items
+        found-items="ctrl.found"
+        on-remove="ctrl.removeItem(index)"></found-items>
     </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
 
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
-  </div>
-
-</body>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
