Work on Module 3 Assignment

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -21,9 +21,11 @@
       </div>
 
       <!-- found-items should be implemented as a component -->
-      <found-items
+      <!-- <found-items
         found-items="ctrl.found"
-        on-remove="ctrl.removeItem(index)"></found-items>
+        on-remove="ctrl.removeItem(index)"></found-items> -->
+
+      <found-items></found-items>
     </div>
 
     <script src="angular.min.js"></script>
