--- a/module3-solution/searchList.html
+++ b/module3-solution/searchList.html
@@ -1,8 +1,12 @@
+<!--
 <ol>
     <li ng-repeat="item in ctrl.found">
         ({{ item.short_name }}) {{ item.name }}
         <button ng-click="ctrl.onRemove({index: $index});">Don't want this one!</button>
     </li>
 </ol>
+ -->
 
-{% comment %} <div class="error" ng-if="list.cookiesInList()">WARNING! WARNING! COOKIES DETECTED!</div> {% endcomment %}
+<!-- <div class="error" ng-if="list.cookiesInList()">WARNING! WARNING! COOKIES DETECTED!</div> -->
+
+<div>Test</div>
