Work on Module 3 Assignment

--- a/module3-solution/searchList.html
+++ b/module3-solution/searchList.html
@@ -1,12 +1,10 @@
-<!--
 <ol>
-    <li ng-repeat="item in ctrl.found">
+    <li ng-repeat="item in dirCtrl.foundItems">
         ({{ item.short_name }}) {{ item.name }}
-        <button ng-click="ctrl.onRemove({index: $index});">Don't want this one!</button>
+        <button ng-click="dirCtrl.onRemove({index: $index});">Don't want this one!</button>
     </li>
 </ol>
- -->
 
 <!-- <div class="error" ng-if="list.cookiesInList()">WARNING! WARNING! COOKIES DETECTED!</div> -->
 
-<div>Test</div>
+<!-- <div>Test</div> -->
