--- a/module3-solution/searchList.html
+++ b/module3-solution/searchList.html
@@ -1,10 +1,11 @@
-<ol>
-    <li ng-repeat="item in dirCtrl.foundItems">
-        ({{ item.short_name }}) {{ item.name }}
-        <button ng-click="dirCtrl.onRemove({index: $index});">Don't want this one!</button>
-    </li>
-</ol>
+<div>
+    <ol>
+        <li ng-repeat="item in dirCtrl.foundItems">
+            ({{ item.short_name }}) {{ item.name }}
+            <p>{{ item.description }}
+            <button ng-click="dirCtrl.onRemove({index: $index});">Don't want this one!</button>
+        </li>
+    </ol>
+</div>
 
 <!-- <div class="error" ng-if="list.cookiesInList()">WARNING! WARNING! COOKIES DETECTED!</div> -->
-
-<!-- <div>Test</div> -->
