Work on Module 3 Assignment

--- a/module3-solution/searchList.html
+++ b/module3-solution/searchList.html
@@ -1,4 +1,4 @@
-<div ng-show="dirCtrl.message">Nothing found</div>
+<div ng-show="dirCtrl.foundItems.length===0">Nothing found</div>
 
 <div>
     <ol>
