--- a/module3-solution/searchList.html
+++ b/module3-solution/searchList.html
@@ -1,6 +1,8 @@
-<div ng-show="dirCtrl.foundItems.length===0">Nothing found</div>
+<div ng-show="dirCtrl.foundItems.length===0">
+    <h3>Nothing found</h3>
+</div>
 
-<div>
+<div class="col-12">
     <ol>
         <li ng-repeat="item in dirCtrl.foundItems">
             ({{ item.short_name }}) {{ item.name }} <button ng-click="dirCtrl.onRemove({index: $index});">Don't want this one!</button>
