--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -25,7 +25,9 @@
 
         <!-- MenuApp Module Artifacts -->
         <script src="src/menuapp/categories.component.js"></script>
+        <script src="src/menuapp/categories.controller.js"></script>
         <script src="src/menuapp/items.component.js"></script>
+        <script src="src/menuapp/items.controller.js"></script>
 
         <!-- data Module Artifacts -->
         <script src="src/data/menudata.service.js"></script>
