--- a/module5-solution/frontend/src/public/signup/signup.html
+++ b/module5-solution/frontend/src/public/signup/signup.html
@@ -1,8 +1,54 @@
-<form name="regForm" novalidate>
-    <input type="text" name="firstname" placeholder="First Name">
-    <input type="text" name="lastname" placeholder="Last Name">
-    <input type="text" name="email" placeholder="Email">
-    <input type="text" name="phone" placeholder="Phone">
-    <input type="text" name="fav" placeholder="Menu Number of Your Favorite Dish">
-    <button>Submit</button>
-</form>
+<div class="container">
+    <form name="regForm" novalidate
+          class="form-horizontal">
+        <div class="form-group">
+            <label class="col-sm-4 control-label">First Name</label>
+            <div class="col-sm-5">
+                <input type="text" name="firstname" placeholder="First Name"
+                       class="form-control"
+                       ng-model="reg.user.firstname"
+                       required>
+            </div>
+         </div>
+         <div class="form-group">
+            <label class="col-sm-4 control-label">Last Name</label>
+            <div class="col-sm-5">
+                <input type="text" name="lastname" placeholder="Last Name"
+                       class="form-control"
+                       required>
+            </div>
+         </div>
+         <div class="form-group">
+            <label class="col-sm-4 control-label">Email</label>
+            <div class="col-sm-5">
+                <input type="email" name="email" placeholder="Email"
+                       class="form-control"
+                       required>
+            </div>
+         </div>
+         <div class="form-group">
+            <label class="col-sm-4 control-label">Phone</label>
+            <div class="col-sm-5">
+                <input type="tel" name="phone" placeholder="Phone"
+                       class="form-control">
+            </div>
+         </div>
+         <div class="form-group">
+            <label class="col-sm-4 control-label">Favorite Dish</label>
+            <div class="col-sm-5">
+                <input type="text" name="fav" placeholder="Menu Number of Your Favorite Dish. e.g. L1"
+                       class="form-control">
+            </div>
+         </div>
+
+         <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-5">
+                <button type="submit" class="btn btn-default"
+                        ng-disable="regForm.$invalid"
+                        ng-click="">
+                    Submit
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
