--- a/module5-solution/frontend/src/public/signup/signup.html
+++ b/module5-solution/frontend/src/public/signup/signup.html
@@ -1,6 +1,5 @@
 <div class="container">
-    <form name="regForm" novalidate
-          class="form-horizontal">
+    <form name="regForm" novalidate class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-4 control-label">First Name</label>
             <div class="col-sm-5">
@@ -15,29 +14,40 @@
             <div class="col-sm-5">
                 <input type="text" name="lastname" placeholder="Last Name"
                        class="form-control"
+                       ng-model="reg.user.lastname"
                        required>
             </div>
          </div>
          <div class="form-group">
             <label class="col-sm-4 control-label">Email</label>
             <div class="col-sm-5">
-                <input type="email" name="email" placeholder="Email"
+                <input type="email" name="email" placeholder="xxx@xxx.xxx"
                        class="form-control"
+                       ng-model="reg.user.email"
                        required>
+                <span ng-if="regForm.email.$invalid && regForm.email.$touched">
+                    Email must be in the format xxx@xxx.xxx
+                </span>
             </div>
          </div>
          <div class="form-group">
             <label class="col-sm-4 control-label">Phone</label>
             <div class="col-sm-5">
-                <input type="tel" name="phone" placeholder="Phone"
-                       class="form-control">
+                <input type="tel" name="phone" placeholder="###-###-####"
+                       class="form-control"
+                       ng-model="reg.user.phone"
+                       pattern="(\d{3})-(\d{3})-(\d{4})">
+                <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
+                    Phone must be in the format ###-###-####.
+                </span>
             </div>
          </div>
          <div class="form-group">
             <label class="col-sm-4 control-label">Favorite Dish</label>
             <div class="col-sm-5">
                 <input type="text" name="fav" placeholder="Menu Number of Your Favorite Dish. e.g. L1"
-                       class="form-control">
+                       class="form-control"
+                       ng-model="reg.user.fav">
             </div>
          </div>
 
@@ -45,7 +55,7 @@
             <div class="col-sm-offset-4 col-sm-5">
                 <button type="submit" class="btn btn-default"
                         ng-disable="regForm.$invalid"
-                        ng-click="">
+                        ng-click="reg.submit()">
                     Submit
                 </button>
             </div>
