--- a/module5-solution/frontend/src/public/signup/signup.html
+++ b/module5-solution/frontend/src/public/signup/signup.html
@@ -6,7 +6,11 @@
                 <input type="text" name="firstname" placeholder="First Name"
                        class="form-control"
                        ng-model="reg.user.firstname"
-                       required>
+                       required
+                       minlength="2">
+                <span ng-if="(regForm.firstname.$error.minlength || regForm.firstname.$error.required) && regForm.firstname.$touched">
+                    *Firstname must be at least 2 characters
+                </span>
             </div>
          </div>
          <div class="form-group">
@@ -15,30 +19,34 @@
                 <input type="text" name="lastname" placeholder="Last Name"
                        class="form-control"
                        ng-model="reg.user.lastname"
-                       required>
+                       required
+                       minlength="2">
+                <span ng-if="(regForm.lastname.$error.minlength || regForm.lastname.$error.required) && regForm.lastname.$touched">
+                    *Lastname must be at least 2 characters
+                </span>
             </div>
          </div>
          <div class="form-group">
             <label class="col-sm-4 control-label">Email</label>
             <div class="col-sm-5">
-                <input type="email" name="email" placeholder="xxx@xxx.xxx"
+                <input type="email" name="email" placeholder="Email xxx@xxx.xxx"
                        class="form-control"
                        ng-model="reg.user.email"
                        required>
                 <span ng-if="regForm.email.$invalid && regForm.email.$touched">
-                    Email must be in the format xxx@xxx.xxx
+                    *Email address must be in the format xxx@xxx.xxx
                 </span>
             </div>
          </div>
          <div class="form-group">
             <label class="col-sm-4 control-label">Phone</label>
             <div class="col-sm-5">
-                <input type="tel" name="phone" placeholder="###-###-####"
+                <input type="text" name="phone" placeholder="Phone ###-###-####"
                        class="form-control"
                        ng-model="reg.user.phone"
                        pattern="(\d{3})-(\d{3})-(\d{4})">
                 <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
-                    Phone must be in the format ###-###-####.
+                    *Phone number must be in the format ###-###-####
                 </span>
             </div>
          </div>
@@ -53,12 +61,28 @@
 
          <div class="form-group">
             <div class="col-sm-offset-4 col-sm-5">
-                <button type="submit" class="btn btn-default"
-                        ng-disable="regForm.$invalid"
+                <button class="btn btn-default"
+                        ng-disabled="regForm.$invalid"
                         ng-click="reg.submit()">
                     Submit
                 </button>
             </div>
         </div>
     </form>
+
+    <div class="dl-horizontal">
+        <dl>
+            <dt>Full Name</dt>
+            <dd>{{ reg.user.firstname }} {{ reg.user.lastname }}</dd>
+        </dl>
+        <dl>
+            <dt>Email</dt>
+            <dd>{{ reg.user.email }}</dd>
+        </dl>
+        <dl>
+            <dt>Phone</dt>
+            <dd>{{ reg.user.phone }}</dd>
+        </dl>
+    </div>
+    
 </div>
