--- a/module5-solution/frontend/src/public/signup/signup.html
+++ b/module5-solution/frontend/src/public/signup/signup.html
@@ -84,5 +84,9 @@
             <dd>{{ reg.user.phone }}</dd>
         </dl>
     </div>
+
+    <div>
+        {{ reg.content }}
+    </div>
     
 </div>
